--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,22 @@ label {
     display: block;
     margin: 20px auto 0;
 }
+
+/* back icon */
+.goBack i {
+    background-color: rgba(217, 217, 217, 1);
+    border-radius: 50%;
+    padding: 20px 23px;
+    position: absolute;
+    top: 29px;
+    left: 54px;
+}
+
+.goBack i:hover {
+    opacity: 0.8;
+}
+
+.goBack i:active {
+    opacity: 0.9;
+    color: black;
+}
